# private-pypi-pkg-repo

./: README.md  pom.xml  pyproject.toml  setup.py  tox.ini
src/main/resources/: pyproject.toml  sample.proto  setup.py  tox.ini
src/main/resources/src/pypi/: __main__.py
src/main/resources/src/pypi/test/: runner.py
src/pypi/: __init__.py  sample_pb2.py
