[project]
name = "pypi"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pypi.__version__"}
readme = {file = ["README.rst"]}

[build-system]
requires = ["poetry-core>=1.0.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pypi/_version.py"

